# ERP-explore

./: .gitignore  CLAUDE.md  COORDINATE_ANALYSIS.md  CORRECTION_STATUS.md  CRITICAL_ISSUES.md  DATAWIN_RENDERER_SUMMARY.md  DEMO_TASK_5.md  DEV_GUIDE.md  OPTIMIZATION_SUMMARY.md  PERFORMANCE_GUIDE.md  QUICKSTART.md  README_GENERATE_PI.md  REVERSE_ENGINEERING_BREAKTHROUGH.md  SOLUTION.md  TASK_5_COMPLETION_SUMMARY.md  TASK_5_REPORT.md  TEST_REPORT.md  benchmark_performance.py  example_complete_workflow.py  example_usage.py  generate_pi.py  requirements.txt  test_file_manager.py  test_pdf_generation.py
.claude/: skill-rules.json
cost_risk_checker/: README.md  __init__.py  checker.py  config.py  formatter.py  main.py  queries.py  security.py  test_checker.py  test_integration.py
data/: DATASEL_copy.a01  DATASEL_copy.flt  DataSel_strings.txt  copy_mdf.ps1
dev/: HANDOFF.md
docs/: 01_ERP系統總覽.md  02_SQL結構詳細說明.md  284102_產品編號關係分析.md  README.md  (+7 more)
nrp32_renderer/: IMPLEMENTATION_SUMMARY.md  QUICK_START.md  README.md  RENDER_TO_PDF_README.md  batch_render.py  nrp32_automation.py  nrp32_renderer.py  nview_renderer.py  nview_thunk.py  pyproject.toml  render.bat  render_to_pdf.py  render_to_pdf_enhanced.py  setup_env.bat  test_addtopdf.py  test_chgpdf_direct.py  test_makepdf_8int.py  test_makepdf_params.py  test_makepdf_xexe.py  test_page_to_pdf.py  test_render.bat  test_with_create.py  test_with_init.py
nrp32_renderer/.venv32/: pyvenv.cfg
nrp32_renderer/.venv32/Scripts/: activate  activate.bat
nrp32_renderer/dll/: DATASUN.INI  DATAWIN.INI  HelpID.ini  f7.ini  menu.ini
(+198 files in other folders)
